--- a/entrega1CSS/src/HTML/index.html
+++ b/entrega1CSS/src/HTML/index.html
@@ -8,7 +8,10 @@
     <title>Entrega 1 CSS</title>
 </head>
 <body>
-    <div class="container-1">
+    <div class="divPage">
+        <a href="./Page2.html">Go to 2º page</a>
+    </div>
+    <div class="container container-1">
         <div class="box darken-4"><span class="color-box-text">Darken 4</span></div>
         <div class="box darken-3"><span class="color-box-text">Darken 3</span></div>
         <div class="box darken-2"><span class="color-box-text">Darken 2</span></div>
@@ -20,7 +23,7 @@
         <div class="box lighten-4"><span class="color-box-text">Lighten 4</span></div>
      </div>
 
-        <div class="container-2">
+        <div class="container container-2">
         <div class="box darken-4"><span class="color-box-text">Darken 4</span></div>
         <div class="box darken-3"><span class="color-box-text">Darken 3</span></div>
         <div class="box darken-2"><span class="color-box-text">Darken 2</span></div>
@@ -32,7 +35,7 @@
         <div class="box lighten-4"><span class="color-box-text">Lighten 4</span></div>
      </div>
 
-          <div class="container-3">
+          <div class="container container-3">
         <div class="box darken-4"><span class="color-box-text">Darken 4</span></div>
         <div class="box darken-3"><span class="color-box-text">Darken 3</span></div>
         <div class="box darken-2"><span class="color-box-text">Darken 2</span></div>
