--- a/entrega1CSS/src/HTML/Page3.html
+++ b/entrega1CSS/src/HTML/Page3.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../CSS/styeles3.scss" />
     <title>Document</title>
-</head>
-<body>
-    <p>Hola</p>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Lemoncode</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Activities</a></li>
+          <li><a href="#">About me</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="divPages">
+      <a href="./Page2.html">Go to 2º page</a>
+    </div>
+  </body>
 </html>
