--- a/entrega1CSS/src/HTML/Page2.html
+++ b/entrega1CSS/src/HTML/Page2.html
@@ -13,7 +13,9 @@
       <a href="./Page3.html">Go to 3º page</a>
     </div>
     <main>
-      <div class="div1">
+      <button id="change-color-button" ><b>Change color</b></button>
+   <!--  -->
+      <div class="div1" id="mydiv1">
         <h3>Resultado tema A:</h3>
         <div class="box base-1"><span class="color-box-text">Base</span></div>
 
@@ -31,7 +33,8 @@
         </div>
       </div>
       <!--  -->
-      <div class="div2">
+
+      <div class="div2" id="mydiv2">
         <h3>Resultado tema B:</h3>
 
         <div class="box base-2"><span class="color-box-text">Base</span></div>
@@ -49,6 +52,10 @@
           <span class="color-box-text">Box with Shadow</span>
         </div>
       </div>
+
+
     </main>
+
+    <script src="../JS/Page2.js"></script>
   </body>
 </html>
