--- a/entrega1CSS/src/ejercicio-4/HTML/Page4.html
+++ b/entrega1CSS/src/ejercicio-4/HTML/Page4.html
@@ -11,7 +11,50 @@
     
 
     <main>
+      
         <div class="card">
+            <img   src="../assets/waveSideFormat.jfif" alt="wave">
+            <div class="divText">
+                <h3>Title Card</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Ea consequuntur unde enim dicta et animi ullam, 
+                    saepe aliquam, deleniti modi a error consectetur! 
+                    Nobis dolor deleniti dolorum rem eveniet aut!
+                </p>
+                <small><b>Publishe:</b> March 12/21</small>
+                <button><b>Submit</b></button>
+            </div>
+        </div> 
+          <div class="card">
+            <img   src="../assets/waveSideFormat.jfif" alt="wave">
+            <div class="divText">
+                <h3>Title Card</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Ea consequuntur unde enim dicta et animi ullam, 
+                    saepe aliquam, deleniti modi a error consectetur! 
+                    Nobis dolor deleniti dolorum rem eveniet aut!
+                </p>
+                <small><b>Publishe:</b> March 12/21</small>
+                <button><b>Submit</b></button>
+            </div>
+        </div>
+         <div class="card">
+            <img   src="../assets/waveSideFormat.jfif" alt="wave">
+            <div class="divText">
+                <h3>Title Card</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Ea consequuntur unde enim dicta et animi ullam, 
+                    saepe aliquam, deleniti modi a error consectetur! 
+                    Nobis dolor deleniti dolorum rem eveniet aut!
+                </p>
+                <small><b>Publishe:</b> March 12/21</small>
+                <button><b>Submit</b></button>
+            </div>
+        </div>
+          <div class="card">
             <img   src="../assets/waveSideFormat.jfif" alt="wave">
             <div class="divText">
                 <h3>Title Card</h3>
