casi acabado diseño desktop

--- a/ejercicio2CSS/src/HTML/index.html
+++ b/ejercicio2CSS/src/HTML/index.html
@@ -11,20 +11,22 @@
     <header>
     <div class="toolbar">
         <input type="text" placeholder="Buscar">
+        <div></div>
         <div >Victor Borrego Pérez</div>
       </div>
-     <div class="page_title">Welcome Lemoncoders!</div>
+     <div class="page_title"><b>Welcome Lemoncoders!</b></div>
     </header>
     <!--  -->
 <div class="page_container">
 <nav>
     <div class="menu_container">
-        <div class="menu_title">Frameworks</div>
+        <div class="menu_title"><b>Frameworks</b></div>
         <ul>
-            <li>React</li>
-            <li>Svelte</li>
-            <li>Vue</li>
-            <li>Angular</li>
+            <li><a href="#"><b>React</b></a></li>
+            <li><a href="#"><b>Svelte</b></a></li>
+            <li><a href="#"><b>Vue</b></a></li>
+            <li><a href="#"><b>Angular</b></a></li>
+
         </ul>
     </div>
 </nav>
@@ -49,7 +51,8 @@
         
         <div class="card item">
             <img src="https://avatars.githubusercontent.com/u/43171355?s=96&v=4" alt="teacher">
-            <div class="member_name">Fransisco Javier de Jesús Mazzoni</div>
+            <div class="member_name">Fransisco Javier </div>
+            <div class="member_name">de Jesús Mazzoni</div>
         </div>
         
         <div class="card item">
