--- a/ejercicio2CSS/src/HTML/index.html
+++ b/ejercicio2CSS/src/HTML/index.html
@@ -51,7 +51,8 @@
         
         <div class="card item">
             <img src="https://avatars.githubusercontent.com/u/43171355?s=96&v=4" alt="teacher">
-            <div class="member_name">Fransisco Javier de Jesús Mazzoni</div>
+            <div class=" longName member_namee">Fransisco Javier</div>
+            <div class="member_namee">de Jesús Mazzoni</div>
         </div>
         
         <div class="card item">
